--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,5 @@ Vcs-Browser: https://gitlab.com/kaisenlinux/packages/vpcs
 Package: vpcs
 Section: net
 Architecture: amd64
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}
 Description: Simple Virtual PC Simulator (for GNS3)
